@@ -22,4 +22,17 @@ ws_mail_url=https://mandrillapp.com/api/1.0/messages/send-template.json
 ws_mail_key=r-7smYWoFJApQ-k2oJWCzA
 ws_mail_reply_to=no_responder@snapcar.com.ar
 ws_mail_bcc_address1=admin@snapcar.com.ar
-#ws_mail_bcc_address2=bruno.giel@snapcar.com.ar
+#ws_mail_bcc_address2=andygalaxia@yahoo.com
+
+file_repos=http://docs.snapcar.com.ar/
+factura_svg=https://app.snapcar.com.ar/wappCar/adm/factura/plantillaFactura.svg
+# factura_svg=http://localhost:8081/wappCar/adm/factura/plantillaFactura.svg
+
+# Amazon S3
+bucketServer=https://s3-sa-east-1.amazonaws.com
+bucketName=docs.snapcar.com.ar
+bucketPath=prorroga
+
+# bucketSubDir=poliza
+bucketAccessKey=AKIAJKO3UWQ4GJPY2AIQ
+bucketSecretKey=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
